deploy-sds/v2-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - v2-gateway
  http:
  - route:
    - destination:
        host: frontend-external
        port: 
          number: 80
